--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "live-server",
-    "sass": "node-sass sass/main.sass css/style.css -w"
+    "watch:sass": "node-sass sass/main.sass css/style.css -w",
+    "start": "npm-run-all --parallel dev watch:sass",
+
+    "compile:sass": "node-sass sass/main.sass css/style.compiled.css",
+    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.compiled.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "repository": {
     "type": "git",
@@ -18,6 +25,9 @@
   },
   "homepage": "https://github.com/pharosproduction/natours#readme",
   "devDependencies": {
-    "node-sass": "^4.8.3"
+    "autoprefixer": "^8.4.1",
+    "concat": "^1.0.3",
+    "node-sass": "^4.8.3",
+    "postcss-cli": "^5.0.0"
   }
 }
